# ospsd-python-template

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
.github/issue_template/: bug_report.md  feature_request.md
.github/pull_request_template/: pull_request_template.md
doc/: documentation.md
